_deprecated/oauth2-proxy/manifest/security-policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: myapp-external-auth
  namespace: httpbin
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: httpbin-route
  extAuth:
    headersToExtAuth:
      - cookie
    http:
      headersToBackend:
        - Authorization
        - X-Auth-Request-Groups
      backendRefs:
        - name: oauth2-proxy
          namespace: oauth2-proxy
          port: 80
    failOpen: false
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: ref-grant
  namespace: oauth2-proxy
spec:
  from:
  to:
    - group: ''
      kind: Service
      name: oauth2-proxy
